--- a/peru.yaml
+++ b/peru.yaml
@@ -13,10 +13,10 @@ imports:
 git module dircolors-solarized:
   url: https://github.com/seebi/dircolors-solarized
   rev: a6dfbac61855960b73091d4b1a9f0cd84aee6230
-  # This pattern is a bit of a hack.
-  # TODO: When peru has better support to "cherry pick", use that instead.
-  build: mkdir out && cp dircolors.ansi-dark out/dir_colors
-  export: out
+  build: >
+    mkdir peru-out &&
+    cp dircolors.ansi-dark peru-out/dir_colors
+  export: peru-out
 
 git module vim-colors-solarized:
   url: https://github.com/altercation/vim-colors-solarized.git
@@ -54,3 +54,5 @@ git module vim-yankstack:
 git module vim-youcompleteme:
   url: https://github.com/Valloric/YouCompleteMe.git
   rev: b9f717f23bfba1ff2b29c8ecd0c74c93cbf77d7a
+  build: >
+    ./install.sh --clang-completer
