--- a/tmux.conf
+++ b/tmux.conf
@@ -6,3 +6,23 @@ bind - split-window -v -c '#{pane_current_path}'
 bind c new-window -c '#{pane_current_path}'
 
 set -g default-terminal "screen-256color"
+
+set-option -g status-fg yellow
+set-option -g status-bg black
+
+set-option -g message-fg brightred
+set-option -g message-bg black
+
+set-option -g pane-border-fg black
+set-option -g pane-active-border-fg brightgreen
+
+set-option -g display-panes-active-colour blue
+set-option -g display-panes-colour brightred
+
+set-window-option -g clock-mode-colour green
+
+set-window-option -g window-status-fg brightblue
+set-window-option -g window-status-bg default
+
+set-window-option -g window-status-current-fg brightred
+set-window-option -g window-status-current-bg default
