--- a/tmux.conf
+++ b/tmux.conf
@@ -5,7 +5,7 @@ bind - split-window -v -c '#{pane_current_path}'
 
 bind c new-window -c '#{pane_current_path}'
 
-set -g default-terminal "screen-256color"
+set -g default-terminal 'screen-256color'
 
 set-option -g status-fg yellow
 set-option -g status-bg black
