--- a/tmux.conf
+++ b/tmux.conf
@@ -4,25 +4,60 @@ bind | split-window -h -c '#{pane_current_path}'
 bind - split-window -v -c '#{pane_current_path}'
 
 bind c new-window -c '#{pane_current_path}'
+bind r source-file ~/.tmux.conf
 
+# Enable 256 color mode by default and attempt true-color mode.
 set -g default-terminal 'screen-256color'
+set-option -ga terminal-overrides ',*256col*:Tc'
 
-set-option -g status-fg yellow
-set-option -g status-bg black
+# Index windows and panes starting from one.
+set -g base-index 1
+set -g pane-base-index 1
 
-set-option -g message-fg brightred
-set-option -g message-bg black
+set-option -g bell-action none
+set-option -g visual-activity off
+set-option -g visual-bell off
+set-option -g visual-silence off
+set-window-option -g monitor-activity off
 
-set-option -g pane-border-fg black
-set-option -g pane-active-border-fg brightgreen
+setw -g mode-attr bold
+setw -g mode-bg black
+setw -g mode-fg red
+setw -g clock-mode-colour black
 
-set-option -g display-panes-active-colour blue
-set-option -g display-panes-colour brightred
+set -g pane-border-bg brightblack
+set -g pane-border-fg black
+set -g pane-active-border-bg brightblack
+set -g pane-active-border-fg blue
 
-set-window-option -g clock-mode-colour green
+set -g status-justify left
+set -g status-interval 2
+set -g status-position top
+set -g status-attr none
+set -g status-bg black
+set -g status-fg brightblue
+set -g status-left '#[bg=black,fg=brightblue,bold] #S '
+set -g status-right '#[fg=brightblack,bg=brightyellow] %Y-%m-%d #[fg=brightblack,bg=brightcyan] %H:%M:%S '
+set -g status-left-length 32
 
-set-window-option -g window-status-fg brightblue
-set-window-option -g window-status-bg default
+set -g window-status-separator '#[bg=brightyellow,fg=brightblack]'
 
-set-window-option -g window-status-current-fg brightred
-set-window-option -g window-status-current-bg default
+setw -g window-status-attr none
+setw -g window-status-bg brightyellow
+setw -g window-status-fg brightblack
+setw -g window-status-format ' #[fg=brightblack]#I#[fg=brightblack]:#[fg=brightblack]#W#[fg=brightblack] '
+
+setw -g window-status-current-attr none
+setw -g window-status-current-bg blue
+setw -g window-status-current-fg brightwhite
+setw -g window-status-current-format ' #[fg=brightwhite]#I#[fg=brightblack]:#[fg=brightwhite]#W#[fg=brightblack] '
+
+setw -g window-status-bell-attr bold
+setw -g window-status-bell-bg red
+setw -g window-status-bell-fg brightblue
+
+set -g message-attr none
+set -g message-bg black
+set -g message-fg red
+set -g message-command-bg black
+set -g message-command-fg red
