--- a/tmux.conf
+++ b/tmux.conf
@@ -20,44 +20,29 @@ set-option -g visual-bell off
 set-option -g visual-silence off
 set-window-option -g monitor-activity off
 
-setw -g mode-attr bold
-setw -g mode-bg black
-setw -g mode-fg red
+setw -g mode-style bg=black,fg=red,bold
 setw -g clock-mode-colour black
 
-set -g pane-border-bg brightblack
-set -g pane-border-fg black
-set -g pane-active-border-bg brightblack
-set -g pane-active-border-fg blue
+set -g pane-border-style bg=brightblack,fg=black
+set -g pane-active-border-style bg=brightblack,fg=blue
 
 set -g status-justify left
 set -g status-interval 2
 set -g status-position top
-set -g status-attr none
-set -g status-bg black
-set -g status-fg brightblue
+set -g status-style bg=black,fg=brightblue,none
 set -g status-left '#[bg=black,fg=brightblue,bold] #S '
 set -g status-right '#[fg=brightblack,bg=brightyellow] %Y-%m-%d #[fg=brightblack,bg=brightcyan] %H:%M:%S '
 set -g status-left-length 32
 
 set -g window-status-separator '#[bg=brightyellow,fg=brightblack]'
 
-setw -g window-status-attr none
-setw -g window-status-bg brightyellow
-setw -g window-status-fg brightblack
+setw -g window-status-style bg=brightyellow,fg=brightblack,none
 setw -g window-status-format ' #[fg=brightblack]#I#[fg=brightblack]:#[fg=brightblack]#W#[fg=brightblack] '
 
-setw -g window-status-current-attr none
-setw -g window-status-current-bg blue
-setw -g window-status-current-fg brightwhite
+setw -g window-status-current-style bg=blue,fg=brightwhite,none
 setw -g window-status-current-format ' #[fg=brightwhite]#I#[fg=brightblack]:#[fg=brightwhite]#W#[fg=brightblack] '
 
-setw -g window-status-bell-attr bold
-setw -g window-status-bell-bg red
-setw -g window-status-bell-fg brightblue
+setw -g window-status-bell-style bg=red,fg=brightblue,bold
 
-set -g message-attr none
-set -g message-bg black
-set -g message-fg red
-set -g message-command-bg black
-set -g message-command-fg red
+set -g message-style bg=black,fg=red,none
+set -g message-command-style bg=black,fg=red
