--- a/tmux.conf
+++ b/tmux.conf
@@ -14,6 +14,9 @@ set-option -ga terminal-overrides ',*256col*:Tc'
 set -g base-index 1
 set -g pane-base-index 1
 
+set -g mode-keys emacs
+set -g status-keys emacs
+
 set-option -g bell-action none
 set-option -g visual-activity off
 set-option -g visual-bell off
