--- a/starship.toml
+++ b/starship.toml
@@ -1,12 +1,12 @@
 add_newline = false
-prompt_order = [
-    "username",
-    "hostname",
-    "directory",
-    "git_branch",
-    "git_status",
-    "package",
-    "line_break",
-    "jobs",
-    "character"
-]
+format = """\
+    $username\
+    $hostname\
+    $directory\
+    $git_branch\
+    $git_status\
+    $package\
+    $line_break\
+    $jobs\
+    $character\
+    """
