--- a/peru.yaml
+++ b/peru.yaml
@@ -1,5 +1,8 @@
 imports:
   dircolors-solarized: .
+  vim-coc:
+    - nvim/bundle/coc
+    - vim/bundle/coc
   vim-colors-solarized:
     - nvim/bundle/colors-solarized
     - vim/bundle/colors-solarized
@@ -46,11 +49,16 @@ imports:
     - vim/bundle/yankstack
 
 git module dircolors-solarized:
-  url: https://github.com/seebi/dircolors-solarized
+  url: https://github.com/seebi/dircolors-solarized.git
   rev: 5fb86a3f947f0e8b3005871c2f97df80e80f3016
   copy:
     dircolors.ansi-dark: dir_colors
   pick: dir_colors
+
+git module vim-coc:
+  url: https://github.com/neoclide/coc.nvim.git
+  rev: c9333a71379ebe47294246e6c6c3f3f0ea740318
+  reup: release
 
 git module vim-colors-solarized:
   url: https://github.com/altercation/vim-colors-solarized.git
@@ -77,7 +85,7 @@ git module vim-glsl:
   rev: 36266238d96cd2219769793855a7e915f5e6a32c
 
 git module vim-lightline:
-  url: https://github.com/itchyny/lightline.vim
+  url: https://github.com/itchyny/lightline.vim.git
   rev: b8976d2e549b417e5d1c1594fb9034b749976cc0
 
 git module vim-neocomplete:
