Bind `X` to `killw`.

--- a/tmux.conf
+++ b/tmux.conf
@@ -5,6 +5,7 @@ bind - split-window -v -c '#{pane_current_path}'
 
 bind c new-window -c '#{pane_current_path}'
 bind r source-file ~/.tmux.conf
+bind X killw
 
 # Enable 256 color mode by default and attempt true-color mode.
 set -g default-terminal 'screen-256color'
