--- a/peru.yaml
+++ b/peru.yaml
@@ -9,11 +9,14 @@ imports:
   vim-colors-nord: nvim/bundle/colors-nord
   vim-colors-solarized: nvim/bundle/colors-solarized
   vim-ctrlp: nvim/bundle/ctrlp
+  vim-dap: nvim/bundle/dap
+  vim-dap-ui: nvim/bundle/dap-ui
   vim-fugitive: nvim/bundle/fugitive
   vim-gitgutter: nvim/bundle/gitgutter
   vim-glsl: nvim/bundle/glsl
   vim-lightline: nvim/bundle/lightline
   vim-nerdtree: nvim/bundle/nerdtree
+  vim-nio: nvim/bundle/nio
   vim-pathogen: nvim/autoload
   vim-rust: nvim/bundle/rust
   vim-surround: nvim/bundle/surround
@@ -75,6 +78,14 @@ git module vim-ctrlp:
   url: https://github.com/kien/ctrlp.vim.git
   rev: 564176f01d7f3f7f8ab452ff4e1f5314de7b0981
 
+git module vim-dap:
+  url: https://github.com/mfussenegger/nvim-dap.git
+  rev: dcc85d12d6e2c18c5fa0f9a304d9f5e767e1401a
+
+git module vim-dap-ui:
+  url: https://github.com/rcarriga/nvim-dap-ui.git
+  rev: a5606bc5958db86f8d92803bea7400ee26a8d7e4
+
 git module vim-fugitive:
   url: https://github.com/tpope/vim-fugitive.git
   rev: ce882460cf3db12e99f8bf579cbf99e331f6dd4f
@@ -95,6 +106,10 @@ git module vim-lightline:
 git module vim-nerdtree:
   url: https://github.com/scrooloose/nerdtree.git
   rev: 6ad85ec29b4b0f890ff5733f66d8d4acbdf16a00
+
+git module vim-nio:
+  url:  https://github.com/nvim-neotest/nvim-nio.git
+  rev: a428f309119086dc78dd4b19306d2d67be884eee
 
 git module vim-pathogen:
   url: https://github.com/tpope/vim-pathogen.git
