Configure theming for `bat`.

--- a/peru.yaml
+++ b/peru.yaml
@@ -1,6 +1,7 @@
 # Neovim plugins can be written to `out/nvim/pack/bundle/opt` if further
 # configuration in `init.lua` is necessary.
 imports:
+  bat-colors-catppuccin: out/bat
   nvim-coc: out/nvim/bundle/coc
   nvim-colors-catppuccin: out/nvim/bundle/colors-catppuccin
   nvim-ctrlp: out/nvim/bundle/ctrlp
@@ -15,6 +16,14 @@ imports:
   nvim-surround: out/nvim/bundle/nvim-surround
   nvim-toml: out/nvim/bundle/toml
   nvim-treesitter: out/nvim/bundle/nvim-treesitter/
+
+git module bat-colors-catppuccin:
+  url: https://github.com/catppuccin/bat.git
+  reup: main
+  move:
+    'themes/Catppuccin Mocha.tmTheme': themes/catppuccin-mocha.tmTheme
+  pick: themes/catppuccin-mocha.tmTheme
+  rev: d714cc1d358ea51bfc02550dabab693f70cccea0
 
 git module nvim-coc:
   url: https://github.com/neoclide/coc.nvim.git
